--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "firebase": "^9.9.1",
     "lottie-web": "^5.9.6",
     "react": "^18.0.0",
