--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.7",
     "recoil": "^0.7.4"
   },
