--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "uglify": "uglifyjs ./scripts/embed.js --output public/scripts/embed.min.js "
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
